--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "author": "J. Thomas Wise <joshuathomaswise@gmail.com>",
   "license": "UNLICENSED",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "backbone": "^1.3.3",
+    "jquery": "^3.1.0",
+    "underscore": "^1.8.3"
+  },
   "devDependencies": {
     "browserify": "^13.0.1",
     "gulp": "^3.9.1",
