--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "backbone": "^1.3.3",
     "jquery": "^3.1.0",
+    "normalize.css": "^4.2.0",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
