--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "backbone": "^1.3.3",
+    "express": "^4.14.0",
     "jquery": "^3.1.0",
     "normalize.css": "^4.2.0",
     "underscore": "^1.8.3"
